fix right scrollbar always present
fixes https://github.com/ByteInternet/hypernode-docs-next/issues/16

--- a/docs/_static/scss/general.scss
+++ b/docs/_static/scss/general.scss
@@ -43,7 +43,7 @@ h2 {
     grid-template-columns: 300px 900px 300px;
     justify-content: center;
     position: relative;
-    top: 80px;
+    margin-top: 80px;
 }
 
 .wy-nav-content-wrap {
